blink (0.2.0) unstable; urgency=low

  * TBW

 -- Adrian Georgescu <ag@ag-projects.com>  Sun, 10 Oct 2010 13:47:41 +0200

blink (0.1.4) unstable; urgency=low

  * Save preferred media when creating a contact
  * Fixed broken dependency to python-aplication for non-Debian systems
  * Display 'no new messages' text before getting MWI NOTIFY

 -- Saul Ibarra <saul@ag-projects.com>  Mon, 06 Sep 2010 16:05:15 +0200

blink (0.1.3) unstable; urgency=low

  * Added support for inband DTMF dialing
  * Improved logic for matching contacts to incoming sessions
  * Added pstn prefix setting
  * Fixed enabling Bonjour account item in the menu
  * Added initial MWI support

 -- Saul Ibarra <saul@ag-projects.com>  Fri, 03 Sep 2010 09:54:52 +0200

blink (0.1.2) unstable; urgency=low

  * First beta release for Microsoft Windows
  * Switch automatically to the plugged audio device
  * Release notes available at http://icanblink.com/blink-qt-windows-beta.phtml

 -- Saul Ibarra <saul@ag-projects.com>  Fri, 03 Sep 2010 09:54:52 +0200

blink (0.1.1) unstable; urgency=low

  * First public release for Debian and Ubuntu Linux
  * Release notes available at http://icanblink.com/blink-qt-beta.phtml
  * Multiple SIP accounts
  * Easy to setup accounts, only the SIP address and password are required
  * Bonjour discovery mechanism
  * Automatic detection of IP address changes
  * TLS Security for both signaling and media
  * NAT traversal using ICE
  * Built-in DNS resolver to by-pass broken implementations in NAT routers
  * Re-INVITE support for adding and removing media streams
  * One-click SIP account sign-up at http://sip2sip.info
  * Integration with AG Projects Multimedia Service Platform
  * Integration with third-party SIP service providers
  * Wideband Audio (G722 & speex)
  * Multiple parallel calls
  * Play hold tone and disconnect tone
  * In-band DTMF support for legacy devices
  * Per account ringtones
  * Silent mode (do not ring on incoming call)
  * Mute microphone