@@ -4,6 +4,25 @@
 <link rel='stylesheet' type='text/css' href='style.css'>
 </head>
 
+<h2>Version 0.2.0</h2>
+
+<p>November 11h, 2010
+
+<ul>
+<li>First Blink QT official release for MS Windows
+<li>Added the preferences panel
+<li>Enable inband DTMF by default
+<li>Disable ICE by default
+<li>Simplified MWI code and improved its user interface
+<li>Improve handling of Google contacts
+<li>Open the dialog for adding the initial account after the main window
+<li>Switch to new plugged-in device automatically if we have active calls
+<li>Added transparency for contact icons
+<li>Added conference contact on first start
+<li>Many bug fixes in the middleware
+<li>Adapted to the latest changes in SIP SIMPLE client SDK
+</ul>
+
 <h2>Version 0.1.4</h2>
 
 <p>September 6th, 2010
